# doc-renamer-suz

./: README.md  pyproject.toml
renomeador_chandra/: __init__.py  _rich_stub.py  _typer_stub.py  cli.py  config.py  ocr_chandra.py  parsing.py  renamer.py  report.py  rules.py  utils.py
rich/: __init__.py  console.py  table.py
tests/: test_integration.py  test_parsing.py  test_rules.py
typer/: __init__.py
